<resources>
    <string name="app_name">MySystems</string>
    <string name="login_title">出租房客管理系统</string>
    <string name="login_account">账号:</string>
    <string name="login_hint_account">请输入账号</string>
    <string name="login_password">密码:</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_btn_submit">登录</string>
    <string name="login_link_bug">联系客服</string>
    <string name="login_register_btn">注册</string>
    <string name="login_rmb_pwd">记住密码</string>
    <string name="rgt_name">用户名:</string>
    <string name="rgt_register_btn">注册</string>
    <string name="activity_MemberCenter">个人中心</string>
    <string name="activity_UserManager">租客信息管理</string>
    <string name="activity_RantManager">财务管理</string>
    <string name="activity_HouseManager">房屋管理</string>
    <string name="account_account">用户名:</string>
    <string name="account_password">密码:</string>
    <string name="account_modify">修改</string>
    <string name="account_back">返回</string>
    <string name="account_pwdSure">确认密码:</string>
    <string name="account_act_hint">请输入你需要修改的用户名</string>
    <string name="account_pwd_hint">请输入你需要修改后的密码</string>
    <string name="account_pwdSure_hint">请再次输入你修改后的密码</string>
    <string name="user_search_ed">请输入需要查询的租客姓名</string>
    <string name="activity_UserAdd">租客个人信息添加</string>
    <string name="user_query_username">姓名:</string>
    <string name="user_query_usernameHint">请输入租客姓名</string>
    <string name="user_query_userTel">联系电话:</string>
    <string name="user_query_userTelHint">请输入租客手机号</string>
    <string name="user_query_userIdNum">身份证号:</string>
    <string name="user_query_userIdNumHint">请输入租客身份证</string>
    <string name="user_query_userAddress">租客籍贯:</string>
    <string name="user_query_userAddressHint">请输入租客的祖籍</string>
    <string name="user_query_userDate">入住时间:</string>
    <string name="user_query_userDateHint">请输入租客入住时间</string>
    <string name="user_query_userSex">性别:</string>
    <string name="activity_UserUpdate">租客个人信息修改</string>
    <string name="house_search_ed">请输入需要查询的房间号</string>
    <string name="house_add_houseNumHint">请输入房间号</string>
    <string name="house_add_houseNum">房间号:</string>
    <string name="house_add_houseSize">房型:</string>
    <string name="house_add_houseSizeHint">请输入房型</string>
    <string name="house_update_houseNum">房间号:</string>
    <string name="house_update_houseNumHint">请选择房间号</string>
    <string name="house_update_houseSize">房型:</string>
    <string name="house_update_houseSizeHint">请输入房子的型号</string>
    <string name="house_update_userName">住客姓名:</string>
    <string name="activity_HouseAdd">房间添加</string>
    <string name="activity_HouseUpdate">住客—房间信息录入</string>
    <string name="finance_add_houseNum">房间号:</string>
    <string name="finance_add_userName">住客姓名:</string>
    <string name="finance_add_nowEle">当月电度:</string>
    <string name="finance_add_nowEleHint">请输入当月住客用电度数</string>
    <string name="finance_add_nowWat">当月水方:</string>
    <string name="finance_add_nowWatHint">请输入当月住客用水体积（方）</string>
    <string name="finance_add_preEle">电费单价:</string>
    <string name="finance_add_preEle_ed">请输入当月电费单价（元/度）</string>
    <string name="finance_add_preWat">水方单价:</string>
    <string name="finance_add_preWatHint">请输入当月水方单价（元/方）</string>
    <string name="finance_add_date">时间:</string>
    <string name="finance_add_dateHint">点击并选择报表产生时间</string>
    <string name="activity_FinanceAdd">报表信息添加</string>
    <string name="activity_FinanceShow">报表展示</string>
    <string name="finance_add_netRant">网费</string>
    <string name="finance_add_netRantHint">请输入网费</string>
    <string name="finance_add_houseRant">房租</string>
    <string name="finance_add_houseRantHint">请输入住客房租</string>
</resources>