<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/user_query_iv"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_gravity="center"
        android:src="@drawable/house_update_font" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,3">

        <TableRow>

            <TextView />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/house_update_houseNum"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/house_update_houseNum_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/house_update_houseNumHint"
                android:minWidth="250sp"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView />
        </TableRow>

        <TableRow>

            <TextView />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/house_update_houseSize"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/house_update_houseSize_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/house_update_houseSizeHint"
                android:minWidth="250sp"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView />
        </TableRow>

        <TableRow>

            <TextView />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/house_update_userName"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/house_update_house_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="250sp"
                android:spinnerMode="dialog"
                android:textSize="20sp" />

            <TextView />
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/house_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="update"
            android:paddingLeft="100sp"
            android:paddingRight="100sp"
            android:text="添加"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>
